Revert "Minor adjustments to fix alignment. Improvement of texts and meta tags."
This reverts commit de7fb7c7bf67df0003081f02bc032d628dad7cc3.

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -13,15 +13,6 @@ $dark-gray: #03c100;
 $medium-gray: $6D6B69;
 */
 
-
-* { background-color: rgba(255,0,0,.2); }
-* * { background-color: rgba(0,255,0,.2); }
-* * * { background-color: rgba(0,0,255,.2); }
-* * * * { background-color: rgba(255,0,255,.2); }
-* * * * * { background-color: rgba(0,255,255,.2); }
-* * * * * * { background-color: rgba(255,255,0,.2); }
-
-
 body {
     width: 100%;
     height: 100%;
@@ -456,7 +447,8 @@ a[href], input[type='submit'], input[type='image'], label[for], select, button, 
 .intro {
 display: table;
 width: 100%;
-height: 100vh;
+height: 100%;
+height: auto;
 text-align: center;
 padding: 110px 0;
 }
